force-app/main/default/objects/Repair_Order__c/Repair_Order__c.object-meta.xml
<CustomObject>
    <label>Repair Order</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Repair Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repair Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>