force-app/main/default/objects/Repair_Order__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <formula>IF(TEXT( Repair_Status__c ) = &quot;Finished&quot; || TODAY() &lt;=  Expected_End_Date__c, IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;,15,30),

IF(TEXT( Repair_Status__c ) &lt;&gt; &quot;Finished&quot; &amp;&amp; TODAY() &lt;=  Expected_End_Date__c + 3, IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;yellow&quot;,15,30),

IF(TEXT( Repair_Status__c ) &lt;&gt; &quot;Finished&quot; &amp;&amp; TODAY() &gt;  Expected_End_Date__c + 3, IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;,15,30),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition</label>
    <type>Text</type>
</CustomField>