force-app/main/default/objects/Repair_Order__c/fields/Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>Repair_Status__c</fullName>
    <label>Repair Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Behind Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>