force-app/main/default/objects/Repair_Order__c/fields/Vehicle_Test__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Test__c</fullName>
    <label>Vehicle Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unauthorized</fullName>
                <default>true</default>
                <label>Unauthorized</label>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>