force-app/main/default/objects/Repair_Order__c/validationRules/ExpectedDateGreaterThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpectedDateGreaterThanStartDate</fullName>
    <active>true</active>
    <description>To prevent the expected end date to be lesser than start date</description>
    <errorConditionFormula>Expected_End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>Expected_End_Date__c</errorDisplayField>
    <errorMessage>You can expected to finish before starting right?</errorMessage>
</ValidationRule>