force-app/main/default/objects/Repair_Order__c/validationRules/StartDateLesserThanToday.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateLesserThanToday</fullName>
    <active>true</active>
    <description>To prevent to set the start date before today()</description>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>You Cannot set the Start Date before Today!!</errorMessage>
</ValidationRule>